# groundctl

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  test_continuous_listen.py  test_listener.py  test_whisper.py
groundctl/: intent.py  listener.py  mcp_server.py  navigation.py  perception.py  places.py  rover_client.py
scripts/: download_frodobots.py
