[project]
name = "groundctl"
version = "0.1.0"
description = "Ground Control to Major Claude — MCP server for EarthRover autonomous navigation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
groundctl = "groundctl.mcp_server:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
